# python3-project-template

./: .dockerignore  .pre-commit-config.yaml  Containerfile  Dockerfile  README.rst  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.devcontainer/: Containerfile  Dockerfile  devcontainer.json  docker-compose.yml
src/python3_project_template/: __init__.py  __main__.py  conf.py
