[build-system]
requires = ["setuptools>=78.0", "setuptools_rust", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-template-project"
version = "0.1.0"
description = "Python3 template project"
authors = [
    {name = "Oleg Korsak", email = "kamikaze.is.waiting.you@gmail.com"}
]
license = "GPL-3.0"
readme = {file = "README.rst", content-type = "text/x-rst"}
requires-python = ">=3.13"
keywords = ["template", "example", "project"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]

dependencies = [
    "pydantic==2.11.0",
    "pydantic_settings==2.8.1"
]

[project.urls]
Documentation = "https://github.com/kamikaze/python3-project-template/wiki"
Homepage = "https://github.com/kamikaze/python3-project-template"

[project.optional-dependencies]
testing = [
    "pytest",
    "pytest-cov"
]

[project.entry-points.console_scripts]
# Example: Uncomment and replace with actual entry points if needed
# fibonacci = "python3_project_template.skeleton:run"

[tool.setuptools]
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests"]

[tool.setuptools.package-data]
python3_project_template = [
    "rustlib/Cargo.toml",
    "rustlib/lib.rs",
    "clib/extmod.c",
    "*.rst",
    "*.txt",
    "*.md"
]

[tool.pytest.ini_options]
addopts = "--cov python3_project_template --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.bdist_wheel]
universal = true
